--- a/module-3/16_Web_Services_GET/exercise/package.json
+++ b/module-3/16_Web_Services_GET/exercise/package.json
@@ -17,21 +17,22 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
-    "json-server": "^0.16.3",
+    "gulp": "^3.9.1",
+    "json-server": "^0.17.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.11",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.11",
-    "@vue/cli-plugin-eslint": "~4.5.11",
-    "@vue/cli-plugin-router": "~4.5.11",
-    "vue-loader-v16": "npm:vue-loader@16.1.2",
-    "@vue/cli-service": "~4.5.11",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-e2e-cypress": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.0.3",
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^7.7.0",
     "npm-run-all": "^4.1.5",
+    "vue-loader-v16": "npm:vue-loader@16.1.2",
     "vue-template-compiler": "^2.6.12"
   }
 }
